--- a/emacs.org
+++ b/emacs.org
@@ -1276,9 +1276,10 @@ We want to be able to edit CMake files in a sane way.
     :commands js2-mode
     :init (progn
             (add-to-list 'auto-mode-alist '("\\.js\\'" . js2-mode))
-            (add-to-list 'interpreter-mode-alist '("node" . js2-mode))
-            (custom-set-variables
-             '(js2-basic-offset 2))))
+            (add-to-list 'interpreter-mode-alist '("node" . js2-mode)))
+    :config (progn
+              (custom-set-variables
+               '(js2-basic-offset 2))))
 #+end_src
 
 ** which-function-mode
