feat: now we can have a machine specific configuration

--- a/emacs.org
+++ b/emacs.org
@@ -132,6 +132,17 @@
     (setq mac-command-modifier 'super))
 #+end_src
 
+*** host specific configuration options
+
+No computer is alike!
+
+#+begin_src emacs-lisp
+  (setq ck-machine-filename (concat system-name ".el"))
+  (setq ck-machine-local-file (expand-file-name ck-machine-filename user-emacs-directory))
+  (when (file-readable-p ck-machine-local-file)
+    (load-file ck-machine-local-file))
+#+end_src
+
 *** exec path initialization
 
 #+begin_src emacs-lisp
