ref: remove notmuch launcher under linux as well

--- a/emacs.org
+++ b/emacs.org
@@ -1370,36 +1370,18 @@ prefix argument."
 
 #+begin_src emacs-lisp
   (define-key ck/keys-minor-mode-map "\C-ccl"
-    (if (ck/is-osx)
-        (defhydra launchers (:color blue)
-          "Launchers"
-          ("c" calc "Calc")
-          ("d" ediff-buffers "ediff")
-          ("f" find-dired "find-dired")
-          ("g" lgrep "lgrep")
-          ("G" rgrep "rgrep")
-          ("h" man "man")
-          ("s" eshell-here "eshell")
-          ("t" proced "proced")
-          ("a" magit-status "magit-status")
-          ("p" sql-postgres "sql-postgres"))
-      (defhydra launchers (:color blue)
-        "Launchers"
-        ("c" calc "Calc")
-        ("d" ediff-buffers "ediff")
-        ("f" find-dired "find-dired")
-        ("g" lgrep "lgrep")
-        ("G" rgrep "rgrep")
-        ("h" man "man")
-        ("s" eshell-here "eshell")
-        ("t" proced "proced")
-        ("a" magit-status "magit-status")
-        ("p" sql-postgres "sql-postgres")
-        ("m" notmuch "notmuch")
-        ("u" (start-process "dump" "*dump*" "~/dev/mail/dump.sh") "dump tags")
-        ("U" (start-process "restore" "*dump*" "~/dev/mail/restore.sh") "restore tags")
-        ("z" (start-process "sync-mail" "*sync-mail*" "~/dev/mail/sync-mail") "sync mail"))))
-
+    (defhydra launchers (:color blue)
+      "Launchers"
+      ("c" calc "Calc")
+      ("d" ediff-buffers "ediff")
+      ("f" find-dired "find-dired")
+      ("g" lgrep "lgrep")
+      ("G" rgrep "rgrep")
+      ("h" man "man")
+      ("s" eshell-here "eshell")
+      ("t" proced "proced")
+      ("a" magit-status "magit-status")
+      ("p" sql-postgres "sql-postgres")))
 #+end_src
 
 ** =eshell= modifications
