--- a/emacs.org
+++ b/emacs.org
@@ -1384,11 +1384,16 @@ prefix argument."
   current buffer's file. The eshell is renamed to match that
   directory to make multiple eshell windows easier."
     (interactive)
-    (let* ((parent (if (buffer-file-name)
-                       (file-name-directory (buffer-file-name))
-                     default-directory))
+    (let* ((proot (projectile-project-root))
+           (parent (if proot
+                       proot
+                     (if
+                         (buffer-file-name)
+                         (file-name-directory (buffer-file-name))
+                       default-directory)))
            (height (/ (window-total-height) 3))
-           (name   (car (last (split-string parent "/" t)))))
+           (name   (car (last (split-string parent "/" t))))
+           (default-directory parent))
       (split-window-vertically (- height))
       (other-window 1)
       (eshell "new")
