--- a/emacs.org
+++ b/emacs.org
@@ -692,32 +692,33 @@ pseudo-multi-modes (for web templates, where you often have mixed
 contents like CSS, JS and HTML in one file).
 
 #+begin_src emacs-lisp
-(use-package web-mode
-  :commands web-mode
+  (use-package web-mode
+    :commands web-mode
 
-  :init
-  (progn
-    (add-to-list 'auto-mode-alist '("\\.html\\'" . web-mode))
-    (add-to-list 'auto-mode-alist '("\\.phtml\\'" . web-mode))
-    (add-to-list 'auto-mode-alist '("\\.tpl\\.php\\'" . web-mode))
-    (add-to-list 'auto-mode-alist '("\\.jsp\\'" . web-mode))
-    (add-to-list 'auto-mode-alist '("\\.as[cp]x\\'" . web-mode))
-    (add-to-list 'auto-mode-alist '("\\.erb\\'" . web-mode))
-    (add-to-list 'auto-mode-alist '("\\.mustache\\'" . web-mode))
-    (add-to-list 'auto-mode-alist '("\\.djhtml\\'" . web-mode))
-    (add-to-list 'auto-mode-alist '("\\.html\\.eex\\'" . web-mode)))
+    :init
+    (progn
+      (add-to-list 'auto-mode-alist '("\\.html\\'" . web-mode))
+      (add-to-list 'auto-mode-alist '("\\.phtml\\'" . web-mode))
+      (add-to-list 'auto-mode-alist '("\\.tpl\\.php\\'" . web-mode))
+      (add-to-list 'auto-mode-alist '("\\.jsp\\'" . web-mode))
+      (add-to-list 'auto-mode-alist '("\\.as[cp]x\\'" . web-mode))
+      (add-to-list 'auto-mode-alist '("\\.erb\\'" . web-mode))
+      (add-to-list 'auto-mode-alist '("\\.mustache\\'" . web-mode))
+      (add-to-list 'auto-mode-alist '("\\.djhtml\\'" . web-mode))
+      (add-to-list 'auto-mode-alist '("\\.html\\.eex\\'" . web-mode))
+      (add-to-list 'auto-mode-alist '("\\.atom\\.eex\\'" . web-mode)))
 
-  :config
-  (progn
-    (defun ck/web-mode-hook ()
-      "Hooks for Web mode."
-      (setq web-mode-markup-indent-offset 2)
-      (setq web-mode-css-indent-offset 2)
-      (setq web-mode-code-indent-offset 2))
-    (add-hook 'web-mode-hook 'ck/web-mode-hook)
-    (custom-set-variables
-     '(web-mode-disable-auto-pairing t)
-     '(web-mode-enable-auto-pairing nil))))
+    :config
+    (progn
+      (defun ck/web-mode-hook ()
+        "Hooks for Web mode."
+        (setq web-mode-markup-indent-offset 2)
+        (setq web-mode-css-indent-offset 2)
+        (setq web-mode-code-indent-offset 2))
+      (add-hook 'web-mode-hook 'ck/web-mode-hook)
+      (custom-set-variables
+       '(web-mode-disable-auto-pairing t)
+       '(web-mode-enable-auto-pairing nil))))
 #+end_src
 
 ** company-mode
