--- a/emacs.org
+++ b/emacs.org
@@ -1450,3 +1450,43 @@ Pretty-print XML with =xmllint=
 #+begin_src emacs-lisp
   (setq css-indent-offset 2)
 #+end_src
+
+** move lines/region up/down
+
+#+begin_src emacs-lisp
+  (defun move-text-internal (arg)
+     (cond
+      ((and mark-active transient-mark-mode)
+       (if (> (point) (mark))
+              (exchange-point-and-mark))
+       (let ((column (current-column))
+                (text (delete-and-extract-region (point) (mark))))
+         (forward-line arg)
+         (move-to-column column t)
+         (set-mark (point))
+         (insert text)
+         (exchange-point-and-mark)
+         (setq deactivate-mark nil)))
+      (t
+       (beginning-of-line)
+       (when (or (> arg 0) (not (bobp)))
+         (forward-line)
+         (when (or (< arg 0) (not (eobp)))
+              (transpose-lines arg))
+         (forward-line -1)))))
+
+  (defun move-text-down (arg)
+     "Move region (transient-mark-mode active) or current line
+    arg lines down."
+     (interactive "*p")
+     (move-text-internal arg))
+
+  (defun move-text-up (arg)
+     "Move region (transient-mark-mode active) or current line
+    arg lines up."
+     (interactive "*p")
+     (move-text-internal (- arg)))
+
+  (define-key ck/keys-minor-mode-map [\M-up] 'move-text-up)
+  (define-key ck/keys-minor-mode-map [\M-down] 'move-text-down)
+#+end_src
